--- a/ltmain.in
+++ b/ltmain.in
@@ -567,6 +567,9 @@ compiler."
     convenience=
     old_convenience=
     deplibs=
+    extradeplibs=
+    lib_search_path="/lib /usr/lib"
+    
     dlfiles=
     dlprefiles=
     export_dynamic=no
@@ -730,9 +733,12 @@ compiler."
           ;;
         esac
         deplibs="$deplibs $arg"
+        extradeplibs="$extradeplibs $arg"
+        lib_search_path="$lib_search_path `expr $arg : '-L\(.*\)'`"
         ;;
 
       -l*) deplibs="$deplibs $arg" ;;
+      -El*) extradeplibs="$extradeplibs -`expr $arg : '-E\(.*\)'`" ;;
 
       -no-undefined)
 	allow_undefined=no
@@ -1298,6 +1304,185 @@ compiler."
       fi
 
       if test "$build_libtool_libs" = yes; then
+         # Transform deplibs into only deplibs that can be linked in shared.
+         ## Gordon: Do you check for the existence of the libraries in deplibs
+         ## on the system?  That should maybe be merged in here someplace....
+         ## Actually: I think test_compile and file_magic do this... file_regex
+         ## sorta does this. Only pas_all needs to be changed.  -Toshio
+         name_save=$name
+         libname_save=$libname
+         release_save=$release
+         versuffix_save=$versuffix
+         major_save=$major
+         # I'm not sure if I'm treating the release correctly.  I think
+         # release should show up in the -l (ie -lgmp5) so we don't want to
+         # add it in twice.  Is that correct?
+         release=""
+         versuffix=""
+         major=""
+         newdeplibs=
+         case "$check_shared_deplibs_method" in
+         pass_all)   ;; # Don't check for shared/static.  Everything works.
+                        # This might be a little naive.  We might want to check
+                        # whether the library exists or not.  But this is on
+                        # osf3 & osf4 and I'm not really sure... Just
+                        # implementing what was already the behaviour.
+         test_compile)
+           # This code stresses the "libraries are programs" paradigm to its
+           # limits. Maybe even breaks it.  We compile a program, linking it
+           # against the deplibs as a proxy for the library.  Then we can check
+           # whether they linked in statically or dynamically with ldd.
+           $rm conftest.c
+           cat > conftest.c <<EOF
+           int main() { return 0; }
+EOF
+           $rm a.out
+           $CC conftest.c $deplibs $extradeplibs
+           if test $? -eq 0 ; then
+             ldd_output=`ldd a.out`
+             for i in $deplibs; do
+               name="`expr $i : '-l\(.*\)'`"
+               # If $name is empty we are operating on a -L argument.
+               if test "$name" != "" ; then
+                 libname=`eval \\$echo \"$libname_spec\"`
+                 deplib_matches=`eval \\$echo \"$library_names_spec\"`
+                 set dummy $deplib_matches
+                 deplib_match=$2
+                 if test `expr "$ldd_output" : ".*$deplib_match"` -ne 0 ; then
+                   newdeplibs="$newdeplibs $i"
+                 else
+                   echo
+                   echo "*** Warning: This library needs some functionality provided by $i."
+                   echo "*** I have the capability to make that library automatically link in when"
+                   echo "*** you link to this library.  But I can only do this if you have a"
+                   echo "*** shared version of the library, which you do not appear to have."
+                 fi
+               else
+                 newdeplibs="$newdeplibs $i"
+               fi
+             done
+           else
+           # Error occured in the first compile.  Let's try to salvage the situation:
+             # 1) Is the error in the extradeplibs?
+             $rm a.out
+             $CC conftest.c $extradeplibs
+             if test $? -ne 0 ; then
+               echo
+               echo "*** Warning! Not all libraries necessary to the dependent libraries are"
+               echo "*** working!  You will probably need to install some of:"
+               echo "*** $extradeplibs"
+               echo "*** before this library will be fully functional.  Installing these"
+               echo "***  libraries before continuing would be even better."
+               newextradeplibs=
+               for i in $extradeplibs; do
+                 if test `expr "$i" : '-L'` -ne 0 ; then
+                   newextradeplibs="$newextradeplibs $i"
+                 fi
+               done
+               extradeplibs=$newextradeplibs
+             fi
+             # 2) Compile a seperate program for each library.
+             for i in $deplibs; do
+               name="`expr $i : '-l\(.*\)'`"
+              # If $name is empty we are operating on a -L argument.
+               if test "$name" != "" ; then
+                 $rm a.out
+                 $CC conftest.c $i $extradeplibs
+                 # Did it work?
+                 if test $? -eq 0 ; then
+                   ldd_output=`ldd a.out`
+                     libname=`eval \\$echo \"$libname_spec\"`
+                     deplib_matches=`eval \\$echo \"$library_names_spec\"`
+                     set dummy $deplib_matches
+                     deplib_match=$2
+                     if test `expr "$ldd_output" : ".*$deplib_match"` -ne 0 ; then
+                       newdeplibs="$newdeplibs $i"
+                     else
+                       echo
+                       echo "*** Warning: This library needs some functionality provided by $i."
+                       echo "*** I have the capability to make that library automatically link in when"
+                       echo "*** you link to this library.  But I can only do this if you have a"
+                       echo "*** shared version of the library, which you do not appear to have."
+                     fi
+                 else
+                   echo
+                   echo "*** Warning!  Library $i is needed by this library but I was not able to"
+                   echo "***  make it link in!  You will probably need to install it or some"
+                   echo "*** library that it depends on before this library will be fully"
+                   echo "*** functional.  Installing it before continuing would be even better."
+                 fi
+               else
+                 newdeplibs="$newdeplibs $i"
+               fi
+             done
+           fi
+           deplibs=$newdeplibs
+           ;;
+         file_magic* | file_regex)
+           set dummy $check_shared_deplibs_method
+           file_magic_regex="`expr \"$check_shared_deplibs_method\" : \"$2\(.*\)\"`"
+           for a_deplib in $deplibs; do
+             name="`expr $a_deplib : '-l\(.*\)'`"
+             # If $name is empty we are operating on a -L argument.
+             if test "$name" != "" ; then
+               libname=`eval \\$echo \"$libname_spec\"`
+               case "$check_shared_deplibs_method" in
+                 file_magic*)
+                   for i in $lib_search_path; do
+                    # This needs to be more general than file_regex in order to
+                    # catch things like glibc on linux.  Maybe file_regex
+                    # should be more general as well, but maybe not.  Since
+                    # library names are supposed to conform to
+                    # library_name_spec, I think file_regex should remain
+                    # strict.  What do you think Gordon?
+                     potential_libs=`ls $i/$libname[.-]* 2>/dev/null`
+                     for potent_lib in $potential_libs; do
+                       file_output=`file $potent_lib`
+                       if test `expr "$file_output" : ".*$file_magic_regex"` -ne 0 ; then
+                         newdeplibs="$newdeplibs $a_deplib"
+                         a_deplib=""
+                         break 2
+                       fi
+                     done
+                   done
+                   ;;
+                 file_regex)
+                   deplib_matches=`eval \\$echo \"$library_names_spec\"`
+                   set dummy $deplib_matches
+                   deplib_match=$2
+                   for i in $lib_search_path; do
+                     potential_libs=`ls $i/$deplib_match* 2>/dev/null`
+                     if test "$potential_libs" != "" ; then
+                       newdeplibs="$newdeplibs $a_deplib"
+                       a_deplib=""
+                       break
+                     fi
+                   done
+                   ;;
+               esac
+               if test "$a_deplib" != "" ; then
+                 echo
+                 echo "*** Warning: This library needs some functionality provided by $a_deplib."
+                 echo "*** I have the capability to make that library automatically link in when"
+                 echo "*** you link to this library.  But I can only do this if you have a"
+                 echo "*** shared version of the library, which you do not appear to have."
+               fi
+             else
+               # Add a -L argument.
+               newdeplibs="$newdeplibs $a_deplib"
+             fi
+           done # Gone through all deplibs.
+           ;;
+         none | *)  deplibs="" ;;
+         esac
+         versuffix=$versuffix_save
+         major=$major_save
+         release=$release_save
+         libname=$libname_save
+         name=$name_save
+         deplibs=$newdeplibs
+        # Done checking deplibs!
+ 
 	# Get the real and link names of the library.
 	eval library_names=\"$library_names_spec\"
 	set dummy $library_names
