* ltmain.in (IFS): revert Gary's patch when parsing version  	information; we still use `:' here :-)

--- a/ltmain.in
+++ b/ltmain.in
@@ -1157,7 +1157,7 @@ compiler."
       else
 
 	# Parse the version information argument.
-	IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
+	IFS="${IFS= 	}"; save_ifs="$IFS"; IFS=':'
 	set dummy $vinfo 0 0 0
 	IFS="$save_ifs"
 
