* NEWS: -module and libtldl 	* mdemo/Makefile.am: ../libltdl is within $(srcdir)
	* libltdl, Makefile.am: added libltdl (a system independent
	dlopen wrapper library extracted from mdemo)
	* ltmain.in: added -module flag for compiling and linking of
	modules. If enabled it compiles always both .o (with -DLT_RENAME)
	and .lo files
	* mdemo: modified mdemo to work with libltdl
	* tests/ltdl*: added tests for libltdl

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,6 +28,12 @@ mdemo_distfiles = mdemo/Makefile.in mdemo/Makefile.am mdemo/README \
 	mdemo/libfoo1.sym mdemo/libfoo2.sym \
 	mdemo/main.c mdemo/ltdl.h  mdemo/ltdl.c mdemo/ltdls.c
 
+# Files in the libltdl subdirectory that go in the distribution.
+libltdl_distfiles = libltdl/Makefile.in libltdl/Makefile.am libltdl/README \
+	libltdl/acinclude.m4 libltdl/aclocal.m4 \
+	libltdl/configure libltdl/configure.in \
+	libltdl/ltdl.h libltdl/ltdl.c
+
 # These are required by libtoolize.
 pkgdata_SCRIPTS = config.guess config.sub ltconfig
 pkgdata_DATA = ltmain.sh
@@ -67,8 +73,8 @@ $(srcdir)/ltmain.sh: ltmain.in $(top_srcdir)/configure.in
 	sed -e 's/@''PACKAGE@/@PACKAGE@/' -e 's/@''VERSION@/@VERSION@/' $(srcdir)/ltmain.in > ltmain.shT
 	mv -f ltmain.shT $@
 
-# Distribute the demo and mdemo subdirectory.
-dist-hook: $(demo_distfiles) $(mdemo_distfiles)
+# Distribute the demo, mdemo and libltdl subdirectory.
+dist-hook: $(demo_distfiles) $(mdemo_distfiles) $(libltdl_distfiles)
 	mkdir $(distdir)/demo
 	-chmod 755 $(distdir)/demo
 	here=`pwd`; distdir=`cd $(distdir) && pwd` \
@@ -91,9 +97,21 @@ dist-hook: $(demo_distfiles) $(mdemo_distfiles)
 	  || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
 	  || cp -p $$d/$$file $(distdir)/$$file; \
 	done
+	mkdir $(distdir)/libltdl
+	-chmod 755 $(distdir)/libltdl
+	here=`pwd`; distdir=`cd $(distdir) && pwd` \
+	  && cd $(srcdir)/libltdl \
+	  && $(AUTOMAKE) --include-deps --build-dir=$$here/libltdl --srcdir-name=$(srcdir)/libltdl --output-dir=$$distdir/libltdl
+	@for file in $(libltdl_distfiles); do \
+	  d=$(srcdir); \
+	  test -f $(distdir)/$$file \
+	  || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
+	  || cp -p $$d/$$file $(distdir)/$$file; \
+	done
 
 # All our rules should depend on these demo files.
-all: demo/Makefile.in demo/configure mdemo/Makefile.in mdemo/configure
+all: demo/Makefile.in demo/configure mdemo/Makefile.in mdemo/configure \
+     libltdl/Makefile.in libltdl/configure
 
 # We use our own libtool.m4.
 $(srcdir)/acinclude.m4: libtool.m4
@@ -105,6 +123,9 @@ $(srcdir)/demo/acinclude.m4: libtool.m4
 $(srcdir)/mdemo/acinclude.m4: libtool.m4
 	rm -f $(srcdir)/mdemo/acinclude.m4
 	cd $(srcdir)/mdemo && $(LN_S) ../libtool.m4 acinclude.m4
+$(srcdir)/libltdl/acinclude.m4: libtool.m4
+	rm -f $(srcdir)/libltdl/acinclude.m4
+	cd $(srcdir)/libltdl && $(LN_S) ../libtool.m4 acinclude.m4
 
 # Rules for rebuilding some of the demo source files.
 $(srcdir)/demo/Makefile.in: demo/Makefile.am demo/configure.in demo/aclocal.m4
@@ -124,6 +145,15 @@ $(srcdir)/mdemo/configure: mdemo/configure.in mdemo/aclocal.m4
 
 $(srcdir)/mdemo/aclocal.m4: mdemo/configure.in mdemo/acinclude.m4
 	cd $(srcdir)/mdemo && $(ACLOCAL)
+
+$(srcdir)/libltdl/Makefile.in: libltdl/Makefile.am libltdl/configure.in libltdl/aclocal.m4
+	cd $(srcdir)/libltdl && $(AUTOMAKE)
+
+$(srcdir)/libltdl/configure: libltdl/configure.in libltdl/aclocal.m4
+	cd $(srcdir)/libltdl && $(AUTOCONF)
+
+$(srcdir)/libltdl/aclocal.m4: libltdl/configure.in libltdl/acinclude.m4
+	cd $(srcdir)/libltdl && $(ACLOCAL)
 
 ######################################################################
 # These commands really help my life as a maintainer who uses PRCS.
